fix: weird section transition spacing

--- a/src/App.css
+++ b/src/App.css
@@ -218,7 +218,7 @@ section > p {
   background-position: center;
   background-size: cover;
   position: absolute;
-  top: 0px;
+  top: -0.6px;
   background-image: url('./assets/red-blue.svg');
 }
 
